Worked on setting fonts, colors aswell as the footer and navbar

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,11 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
+$light-red: rgb(255, 223, 223);
+$light-blue: #C5CBE3;
+$blue: #4056A1;
+$orange: #ff9d00;
+$yellow: #FFFFB7;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
