--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,23 +11,66 @@
   </head>
 
   <body>
+
+  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <div class="container-fluid">
+    <%= link_to "#", class: "navbar-brand" do %>
+      <i class="fa-solid fa-handshake-angle" style="color: #4056a1;"></i>
+    <% end %>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto">
+        <%# if user_signed_in? %>
+          <li class="nav-item active">
+            <%= link_to "Home", "#", class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Messages", "#", class: "nav-link" %>
+          </li>
+          <li class="nav-item dropdown">
+            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <%= link_to "Action", "#", class: "dropdown-item" %>
+              <%= link_to "Another action", "#", class: "dropdown-item" %>
+              <%= link_to "Log out", "#", class: "dropdown-item", data: {turbo_method: :delete} %>
+            </div>
+          </li>
+        <%# else %>
+          <!--li class="nav-item"-->
+            <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <!--/li-->
+        <%# end %>
+      </ul>
+    </div>
+  </div>
+  </div>
+
+
+
+
+
+
+
     <%= yield %>
 
   <!-- Following-> Container including Footer -->
   <%# Remove the container if you want to extend the Footer to full width. %>
-  <div class="container my-5">
-    <footer class="text-center text-lg-start" style="background-color: #db6930;">
+    <footer class="text-center text-lg-start" style="background-color: #C5CBE3;">
       <div class="container d-flex justify-content-center py-5">
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
           <i class="fab fa-facebook-f"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
           <i class="fab fa-youtube"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
           <i class="fab fa-instagram"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #54456b;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
           <i class="fab fa-twitter"></i>
         </button>
       </div>
@@ -39,7 +82,6 @@
       </div>
     <!-- Copyright -->
     </footer>
-  </div>
 
   </body>
 </html>
