--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column h-100">
 
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
@@ -59,7 +59,7 @@
 
   <!-- Following-> Container including Footer -->
   <%# Remove the container if you want to extend the Footer to full width. %>
-    <footer class="text-center text-lg-start" style="background-color: #C5CBE3;">
+    <footer class="footer fixed-bottom text-center text-lg-start" style="background-color: #C5CBE3;">
       <div class="container d-flex justify-content-center py-5">
         <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
           <i class="fab fa-facebook-f"></i>
