--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,11 +1,12 @@
 <h1>Skills#index</h1>
 <p>Find me in app/views/skills/index.html.erb</p>
 
-<button class='btn btn-primary'><%= link_to 'Add new skill', skills_new_path %></button>
+<button type="button" class="btn btn-outline-primary"><%= link_to 'Add new skill', skills_new_path %></button>
 
 <div class="card">
   <% @skills.each do |skill| %>
 <%# if no photo uploaded, display default picture depending on category (right now only one img-link) %>
+<%# open: check if photo uploaded to correct folder %>
     <% if skill.photo.attached? %>
       <%= cl_image_tag skill.photo.key, height: 300, width: 400, crop: :fill %>
     <% else %>
