--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,26 +61,19 @@
   <%# Remove the container if you want to extend the Footer to full width. %>
     <footer class="footer fixed-bottom text-center text-lg-start" style="background-color: #C5CBE3;">
       <div class="container d-flex justify-content-center py-5">
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2 rounded-circle" style="background-color: #4056A1;">
           <i class="fab fa-facebook-f"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2 rounded-circle" style="background-color: #4056A1;">
           <i class="fab fa-youtube"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2 rounded-circle" style="background-color: #4056A1;">
           <i class="fab fa-instagram"></i>
         </button>
-        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #4056A1;">
+        <button type="button" class="btn btn-primary btn-lg btn-floating mx-2 rounded-circle" style="background-color: #4056A1;">
           <i class="fab fa-twitter"></i>
         </button>
       </div>
-
-    <!-- Copyright -->
-      <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-      </div>
-    <!-- Copyright -->
     </footer>
 
   </body>
