added show action

--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -15,9 +15,8 @@
     <% end %>
       <%= skill.name %>
       <br>
-      <%= skill.description %>
-      <br>
       <%= skill.category %>
       <br>
+      // add user
   <% end %>
 </div>
