--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -3,19 +3,21 @@
 <button type="button" class="btn btn-outline-primary"><%= link_to 'Add new skill', new_skill_path %></button>
 
 <% @skills.each do |skill| %>
-  <%= link_to skill_path(skill) do %>
-    <div class="card">
+  <div class="card mb-3 rounded" style="width: 30rem;">
+    <div class="card-img-top">
       <% if skill.photo.attached? %>
         <%= cl_image_tag skill.photo.key, height: 300, width: 400, crop: :fill %>
       <% else %>
-        <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685373125/Apptitude/default_uwcohm.jpg",
+        <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
         width: 400, height: 300, crop: :fill) %>
       <% end %>
-        <%= skill.name %>
-        <br>
-        <%= skill.category %>
-        <br>
-        <%# add user %>
     </div>
-  <% end %>
+    <div class="card-body">
+      <h5 class="card-title"><%= skill.name %></h5>
+      <h6 class="card-subtitle"><%= skill.category %></h6>
+      <p class="card-text"><%= skill.description %></p>
+      <%# add user %>
+      <button class="btn btn-outline-primary"><%= link_to "Details", skill_path(skill) %></button>
+    </div>
+  </div>
 <% end %>
