--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -14,9 +14,8 @@
     </div>
     <div class="card-body">
       <h5 class="card-title"><%= skill.name %></h5>
+      <h6 class="card-subtitle">User<%= skill.user %></h6>
       <h6 class="card-subtitle"><%= skill.category %></h6>
-      <p class="card-text"><%= skill.description %></p>
-      <%# add user %>
       <button class="btn btn-outline-primary"><%= link_to "Details", skill_path(skill) %></button>
     </div>
   </div>
