Working on finalising the footer

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,8 +2,8 @@
 
 // For example:
 $red: #FD1015;
-$light-red: rgb(255, 223, 223);
-$light-blue: #C5CBE3;
+$main-light-blue: #C7DAFF;
+$main-green: #00B65F ;
 $blue: #4056A1;
 $orange: #ff9d00;
 $yellow: #FFFFB7;
