--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,3 +3,17 @@
   min-height: 100vh;
   grid-template-rows: auto 1fr auto;
  }
+
+button {
+  background: $blue;
+  width: 50px;
+  height: 50px;
+}
+
+.fab {
+  align-content: center;
+}
+
+.footer {
+  background: $main-green;
+}
