--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,8 +11,8 @@ $body-bg:                $main-light-blue;
 $font-size-base:         1rem;
 
 // Colors
-$body-color: $gray;
-$primary:    $blue;
+$body-color: $black;
+$primary:    $main-blue;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
