--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -6,6 +6,13 @@
 $body-font: 'Montserrat', 'sans-serif';
 $headers-font: 'Aleo', 'serif';
 
+$h1: 'Montserrat', 120px;
+$h2: 'Montserrat', 90px;
+$h3: 'Montserrat', 60px;
+$h4: 'Montserrat', 50px;
+$p: 'Montserrat', 22px;
+$a: 'Montserrat', 22px;
+
 // To use a font file (.woff) uncomment following lines
 // @font-face {
 //   font-family: "Font Name";
