--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,19 +1,17 @@
 .page-container {
   display: grid;
   min-height: 100vh;
-  grid-template-rows: auto 1fr auto;
+  // grid-template-rows: auto 1fr auto;
  }
 
 button {
   background: $blue;
   width: 50px;
   height: 50px;
-}
-
-.fab {
   align-content: center;
 }
 
 .footer {
   background: $main-green;
+  height: 80px;
 }
