added username to skills card

--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -10,7 +10,7 @@
   <div class="card-body">
     <h5 class="card-title"><%= @skill.name %></h5>
     <%# add user %>
-    <h5 class="card-title"><%= @skill.user %></h5>
+    <h5 class="card-title"><%= @skill.user["first_name"] %></h5>
     <h6 class="card-subtitle"><%= @skill.category %></h6>
     <p class="card-text"><%= @skill.description %></p>
     <a href="#" class="btn btn-primary">Book</a>
