--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,6 +24,10 @@
   color: $main-blue;
 }
 
+.navbar-brand:hover {
+  color: $main-yellow;
+}
+
 
 .dropdown-menu {
   background-color: $main-yellow;
@@ -35,5 +39,14 @@
 .dropdown-menu:hover {
   color: $main-red;
   border-radius: 25px;
-  font-size: 'Montserrat', 30px;;
+  font-size: 'Montserrat', 30px;
+}
+
+.fas {
+  font-weight: 1200px;
+}
+
+.dropdown-item:focus {
+  background-color: none;
+  color: $main-green;
 }
