--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -46,7 +46,7 @@
   font-weight: 1200px;
 }
 
-.dropdown-item:focus {
-  background-color: none;
+.dropdown-item:hover {
+  background-color: transparent;
   color: $main-green;
 }
