added styling to homepage

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,7 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "card";
+@import "content_container";
+@import "btn_custom";
+@import "floating"
