--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="d-flex flex-column h-100">
+  <body>
     <div class="page-container">
     <div class="navbar-container"><%= render "shared/navbar" %></div>
     <div class="content-container"><%= yield %></div>
