--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,23 +1,26 @@
-<h1>Skills#index</h1>
 
-<button type="button" class="btn btn-outline-primary"><%= link_to 'Add new skill', new_skill_path %></button>
+<div class="floating">
+  <button type="button" class="btn btn-primary"><%= link_to 'Add new skill', new_skill_path, class: "link" %></button>
+</div>
 
-<% @skills.each do |skill| %>
-  <div class="card mb-3 rounded" style="width: 30rem;">
-    <div class="card-img-top">
-      <% if skill.photo.attached? %>
-        <%= cl_image_tag skill.photo.key, height: 300, width: 400, crop: :fill %>
-      <% else %>
-        <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
-        width: 400, height: 300, crop: :fill) %>
-      <% end %>
+<div class="cards">
+  <% @skills.each do |skill| %>
+    <div class="card">
+      <div class="card-img">
+        <% if skill.photo.attached? %>
+          <%= cl_image_tag skill.photo.key, class: "img-fluid", style: "object-fit: cover;" %>
+        <% else %>
+          <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
+          class: "img-fluid", style: "object-fit: cover;") %>
+        <% end %>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title"><%= skill.name %></h5>
+        <%# add user-avatar %>
+        <h5 class="card-title"><%= skill.user["first_name"] %></h5>
+        <h6 class="card-subtitle"><%= skill.category %></h6>
+        <button class="btn btn-custom"><%= link_to "Details", skill_path(skill), class: "link" %></button>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title"><%= skill.name %></h5>
-      <%# add user-avatar %>
-      <h5 class="card-title"><%= skill.user["first_name"] %></h5>
-      <h6 class="card-subtitle"><%= skill.category %></h6>
-      <button class="btn btn-outline-primary"><%= link_to "Details", skill_path(skill) %></button>
-    </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
