--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,5 @@
 @import "components/index";
 @import "pages/index";
 @import "components/navbar";
-@import "components/footer"
+@import "components/footer";
+@import "components/skillcard";
