--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -21,7 +21,7 @@
         </div>
 
         <div class="card-footer bg-transparent text-right mtb-3">
-          <a href="#" class="btn btn-primary rounded-pill float-right px-5" >Book</a>
+          <a href="/bookmark" class="btn btn-primary rounded-pill float-right px-5" >Book</a>
         </div>
       </div>
     </div>
