--- a/app/assets/stylesheets/components/_floating.scss
+++ b/app/assets/stylesheets/components/_floating.scss
@@ -1,5 +1,14 @@
 .floating {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  user-select: none;
   position: fixed;
-  bottom: 0px;
-  right: 0px;
+  bottom: 45px; right: 50px;
+  margin: 100px;
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
 }
