--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <%= link_to "https://apptitude.herokuapp.com/home", class: "navbar-brand" do %>
+    <%= link_to root_path, class: "navbar-brand" do %>
       <h2 class="logo">Apptitude</h2>
     <% end %>
 
@@ -14,7 +14,7 @@
           <li class="nav-item dropdown">
             <%= image_tag "https://i.insider.com/631efb1de8b500001850c163?width=1136&format=jpeg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Home", home_path, class: "dropdown-item" %>
+              <%= link_to "Home", root_path, class: "dropdown-item" %>
               <%= link_to "Dashboard", "#", class: "dropdown-item" %>
 
               <div class="dropdown-divider"></div>
