--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="floating">
   <button type="button" class="btn btn-primary"><%= link_to 'Add new skill', new_skill_path, class: "link" %></button>
 </div>
@@ -8,17 +7,18 @@
     <div class="card">
       <div class="card-img">
         <% if skill.photo.attached? %>
-          <%= cl_image_tag skill.photo.key, class: "img-fluid", style: "object-fit: cover;" %>
+          <%= cl_image_tag skill.photo.key, class: "card-img-top" %>
+          <%# class: "img-fluid", style: "object-fit: cover;" %>
         <% else %>
           <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
-          class: "img-fluid", style: "object-fit: cover;") %>
+          class: "card-img-top") %>
         <% end %>
       </div>
       <div class="card-body">
         <h5 class="card-title"><%= skill.name %></h5>
         <%# add user-avatar %>
-        <h5 class="card-title"><%= skill.user["first_name"] %></h5>
-        <h6 class="card-subtitle"><%= skill.category %></h6>
+        <h6 class="card-title">with <%= skill.user["first_name"] %></h6>
+        <p class="card-text"><%= skill.category %></p>
         <button class="btn btn-custom"><%= link_to "Details", skill_path(skill), class: "link" %></button>
       </div>
     </div>
