--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   <body>
     <div class="page-container">
     <div class="navbar-container"><%= render "shared/navbar" %></div>
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+        <%# <p class="notice"><%= notice %>
+        <%# <p class="alert"><%= alert %>
     <div class="content-container"><%= yield %></div>
       <%# <div> %>
       <%# </div> %>
