--- a/app/assets/stylesheets/components/_content_container.scss
+++ b/app/assets/stylesheets/components/_content_container.scss
@@ -1,3 +1,6 @@
 .content-container {
-  margin-bottom: 100px;
+  margin-bottom: 40px;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-top: 40px;
 }
