navbar with search and logo complete

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -51,3 +51,11 @@
   color: $main-green;
   font-style: bold;
 }
+
+.navbar-logo {
+  color: #3D4CDD;
+}
+
+.navbar-logo:hover {
+  color: #FFFF00;
+}
