--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,14 +4,14 @@
   padding-left: 40px;
 ">
     <%= link_to root_path, class: "navbar-brand" do %>
-<%= inline_svg('logo.svg',  height: '50px', class: 'mi-clase', style: 'fill: #3D4CDD') %>
+<%= inline_svg('logo.svg',  height: '30px', class: 'mi-clase', style: 'fill: #3D4CDD') %>
   <% end %>
 
 
     <div class="d-flex justify-content-center">
     <%= form_with url: skills_path, method: :get, class: "d-flex" do %>
         <div class="input-group">
-            <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "a new skill is waiting" %>
+            <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "look for your new skill" %>
             <div class="input-group-append">
                 <%= submit_tag "Search", class: "btn btn-primary" %>
             </div>
