--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,23 +1,25 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
 
-  <div class="container-fluid" style="  padding-right: 40px;
-  padding-left: 40px;
-">
-    <%= link_to root_path, class: "navbar-brand" do %>
-<%= inline_svg('logo.svg',  height: '30px', class: 'mi-clase', style: 'fill: #3D4CDD') %>
-  <% end %>
+  <div class="container-fluid" style="  padding-right: 80px; padding-left: 80px;">
+<%# padding needs to be added to css just here for fast corrections %>
 
+    <div class="navbar-logo">
+      <%= link_to root_path  do %>
+      <%= inline_svg('logo.svg',  height: '40px', class: 'mi-clase', ) %>
+      <%# color for svg as style css related needs to be checked %>
+      <% end %>
+    </div>
 
-    <div class="d-flex justify-content-center">
+    <div>
     <%= form_with url: skills_path, method: :get, class: "d-flex" do %>
         <div class="input-group">
-            <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "look for your new skill" %>
+            <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "up for new skills?" %>
             <div class="input-group-append">
                 <%= submit_tag "Search", class: "btn btn-primary" %>
             </div>
         </div>
     <% end %>
-</div>
+    </div>
 
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,4 +47,4 @@
       </ul>
     </div>
   </div>
-  </div>
+</div>
