Finished the Floating Button

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,8 +2,7 @@
 @import "alert";
 @import "avatar";
 @import "form_legend_clear";
-@import "navbar";
 @import "card";
 @import "content_container";
 @import "btn_custom";
-@import "floating"
+@import "btn_floating"
