--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer fixed-bottom text-center text-lg-start">
+<footer class="footer text-center text-lg-start">
   <div class="container d-flex justify-content-center py-3">
     <button type="button" class="btn btn-primary btn-lg btn-floating mx-2 rounded-circle">
       <i class="fab fa-facebook-f"></i>
