--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,6 +6,7 @@
 
   .card {
     border-radius: 1em;
+    border: none;
     text-align:left;
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     background-color: $main-yellow;
@@ -14,6 +15,10 @@
 
   .card-img-top {
     border-radius: 1em;
+    object-fit: cover;
+    height:350px;
+    border-bottom-right-radius: 0%;
+    border-bottom-left-radius: 0%;
   }
 
   .card-text {
