--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -6,13 +6,8 @@
   <% @skills.each do |skill| %>
     <div class="card">
       <div class="card-img">
-        <% if skill.photo.attached? %>
-          <%= cl_image_tag skill.photo.key, class: "card-img-top" %>
+        <%= cl_image_tag(skill.photo.key, class: "card-img-top", crop: :thumb, gravity: :face) %>
           <%# class: "img-fluid", style: "object-fit: cover;" %>
-        <% else %>
-          <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
-          class: "card-img-top") %>
-        <% end %>
       </div>
       <div class="card-body">
         <h5 class="card-title"><%= skill.name %></h5>
