--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -21,13 +21,13 @@
         </div>
 
         <%# <div class="card-footer bg-transparent text-right mtb-3"> %>
-          <div data-controller="toggle" class="mt-5">
+          <div data-controller="toggle" class="mtb-5">
             <button  data-action="click->toggle#fire" class="btn custom">Book</button>
               <%# button_to "Book", class: "btn btn-primary rounded-pill float-right px-5", data_action: "click->toggle#fire"%>
                <%# link_to "Book", new_skill_booking_path(@skill), class: "btn btn-primary rounded-pill float-right px-5" %><br>
               <div data-toggle-target="togglableElement" class="d-none">
                 <%= simple_form_for [@skill, @booking] do |f| %>
-                  <%= f.input :date,
+                  <%= f.input :date, label:'Pick a date',
                             as: :string,
                             input_html: { data: { controller: "datepicker" } } %>
                   <%# f.input :date %>
