--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
 
     <div class="navbar-logo">
       <%= link_to root_path  do %>
-      <%= inline_svg('logo.svg',  height: '40px', class: 'mi-clase', ) %>
+      <%= inline_svg('logo.svg',  height: '40px', ) %>
       <%# color for svg as style css related needs to be checked %>
       <% end %>
     </div>
