waiting for updated user create

--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -1,5 +1,6 @@
-<div class="conta justify-content-center align-items-center ">
+<div class="container justify-content-center align-items-center ">
   <div class="skillcard d-flex" style="width: 100%; max-width: 900px">
+
     <div class="row no-gutters">
       <div class="col-md-4">
         <div class="card-img-top" style="height: 100%; overflow: hidden; border-radius: 2em 0 0 2em;object-fit: cover;">
