--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -13,9 +13,45 @@
           <h5 class="card-title">By <%= booking.skill.user["first_name"] %></h5>
           <h6 class="card-subtitle"><%= booking.skill.category %></h6>
           <h6 class="card-title">Booked for: <%= booking.date %></h6>
-          <%= button_to "Update", booking_path(:id) %>
+          <%# button_to "Update", booking_path(:id) %>
+
+          <%# accept or reject forms %>
+          <div class="booking-actions">
+            <% if booking.pending? %>
+              <%= simple_form_for booking do |f| %>
+                <%= f.input :status, as: :hidden, input_html: { value: 'accepted'} %>
+                <%= f.submit 'Accept', class: 'btn btn-info' %>
+              <% end %>
+              <%= simple_form_for booking do |f| %>
+                <%= f.input :status, as: :hidden, input_html: { value: 'rejected'} %>
+                <%= f.submit 'Reject', class: 'btn btn-light' %>
+              <% end %>
+            <% else %>
+              <p class='booking-tag'><%= booking.status %></p>
+            <% end %>
+          </div>
         </div>
       </div>
     <% end %>
+  </div>
+</div>
+
+<div class="container">
+  <h1>My Offers</h1>
+  <div class="cards">
+    <% @skills.each do |skill| %>
+    <div class="card">
+      <div class="card-img">
+          <%= cl_image_tag("https://res.cloudinary.com/dnx6ly8vl/image/upload/v1685450930/default_fqx7cj.jpg",
+          class: "img-fluid", style: "object-fit: cover;") %>
+      </div>
+      <div class="card-body">
+          <h5 class="card-title"><%= skill.name %></h5>
+
+          <h5 class="card-title">By <%= skill.user["first_name"] %></h5>
+          <h6 class="card-subtitle"><%= skill.category %></h6>
+      <% end %>
+      </div>
+    </div>
   </div>
 </div>
