--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -27,7 +27,7 @@
                 <%= f.submit 'Reject', class: 'btn btn-light' %>
               <% end %>
             <% else %>
-              <p class='booking-tag'><%= booking.status %></p>
+              <p class='booking-tag'>Status: <%= booking.status %></p>
             <% end %>
           </div>
         </div>
@@ -49,9 +49,10 @@
           <h5 class="card-title"><%= skill.name %></h5>
 
           <h5 class="card-title">By <%= skill.user["first_name"] %></h5>
+          <%# <h5 class="card-title">By <%= skill.booking.date %></h5>
           <h6 class="card-subtitle"><%= skill.category %></h6>
-      <% end %>
       </div>
     </div>
+      <% end %>
   </div>
 </div>
