--- a/app/assets/stylesheets/components/_btn_custom.scss
+++ b/app/assets/stylesheets/components/_btn_custom.scss
@@ -3,7 +3,7 @@
   border-radius: 50rem;
   text-align: center;
   margin-top: 3px;
-  // padding: 10px 28px;
+  padding: 10px 28px;
 
 
   text-align: center;
