--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container custom-form">
   <h1>Add a new skill</h1>
   <%= simple_form_for(@skill) do |f| %>
     <%= f.input :name %>
