--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,18 @@
 
 <h1>Pages#home</h1>
 
+<%# testing hover here %>
+
+<div class="logo-container">
+  <div class="logo-frame frame1">
+    <%= inline_svg("frame1.svg", class: "svg-frame") %>
+  </div>
+  <div class="logo-frame frame2">
+    <%= inline_svg("frame2.svg", class: "svg-frame") %>
+  </div>
+</div>
+
+
 
 </body>
 
