--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -54,30 +54,13 @@
 
 // logo
 
-.logo-container {
-  height: 80px;
-}
+// .logo-1 .frame {
+//   width: auto;
+//   height: 50px;
+//   background: url(<%= asset_path 'frame1.png' %>) center no-repeat;
+//   background-size: auto 100%;
+// }
 
-.logo-frame {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 40px;
-  height: auto;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.frame1 {
-  visibility: visible;
-  opacity: 1;
-}
-
-.logo-container:hover .frame1 {
-  opacity: 0;
-}
-
-.logo-container:hover .frame2 {
-  opacity: 1;
-}
+// .logo-1:hover .frame {
+//   background-image: url(<%= asset_path 'frame2.png' %>);
+// }
