--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,11 @@
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     background-color: $main-yellow;
     margin: 10px;
+
+    &:hover {
+      border: 3px solid $main-blue;
+      box-shadow: 0 15px 30px rgba(0,0,0,.3);
+    }
   }
 
   .card-img-top {
@@ -23,7 +28,14 @@
 
   .card-text {
     position: absolute;
-    right: 16px;
-    bottom: 0px;
+    left: 16px;
+    bottom: 150px;
+    color: $main-blue;
+    text-shadow: -1px 0 rgba(242, 246, 253, 0.6), 0 1px rgba(242, 246, 253, 0.6), 1px 0 rgba(242, 246, 253, 0.6), 0 -1px rgba(242, 246, 253, 0.6);
   }
+
+  .card-title {
+    color: black;
+  }
+
 }
