--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -11,7 +11,7 @@ $light-gray: #F4F4F4;
 $white: white;
 $black: black;
 
-$main-light-blue: #f2f6fd;
+$main-light-blue: rgb(242, 246, 253);
 $main-green: #00B65F ;
 $main-red: #FF3D00;
 $main-yellow: #FFF9C7;
