--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -2,20 +2,22 @@
   <div class="cards">
     <% @skills.each do |skill| %>
       <div class="card">
-        <div class="card-img">
-    <% if skill.photo.present? %>
-      <%= cl_image_tag(skill.photo.key, class: "card-img-top", crop: :thumb, gravity: :face) %>
-    <% else %>
-      <%= cl_image_tag("images/default_avatar.jpg", class: "card-img-top", crop: :thumb, gravity: :face) %>
-    <% end %>
-  </div>
-        <div class="card-body">
-          <h5 class="card-title"><%= skill.name %></h5>
-          <%# add user-avatar %>
-          <h6 class="card-title">with <%= skill.user["first_name"] %></h6>
-          <p class="card-text"><%= skill.category %></p>
-          <%= link_to "Details", skill_path(skill), class: "link btn btn-custom" %>
-        </div>
+        <%= link_to skill_path(skill), class: "text-decoration-none" do %>
+          <div class="card-img">
+            <% if skill.photo.present? %>
+              <%= cl_image_tag(skill.photo.key, class: "card-img-top", crop: :thumb, gravity: :face) %>
+            <% else %>
+              <%= cl_image_tag("images/default_avatar.jpg", class: "card-img-top", crop: :thumb, gravity: :face) %>
+            <% end %>
+            <p class="card-text"><%= skill.category %></p>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title"><%= skill.name %></h5>
+            <%# add user-avatar %>
+            <h6 class="card-title">with <%= skill.user["first_name"] %></h6>
+            <%= link_to "Details", skill_path(skill), class: "link btn btn-custom" %>
+          </div>
+        <% end %>
       </div>
     <% end %>
   </div>
