--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
   <div class="container-fluid " style="padding-right: 90px; padding-left: 90px;">
     <div class="logo-1">
     <%= link_to root_path, class: "navbar-brand" do %>
-      <%= inline_svg('logo.svg',  height: '50px', class: 'mi-clase', style: 'fill: #3D4CDD') %>
+      <%= inline_svg('logo.svg',  height: '40px', class: 'mi-clase') %>
     <% end %>
     </div>
 
