--- a/app/assets/stylesheets/components/_skillcard.scss
+++ b/app/assets/stylesheets/components/_skillcard.scss
@@ -6,13 +6,11 @@
   margin: auto;
   width: 60%;
   padding: 20px;
-  border-style: solid;
-  border-width: 6px;
-  border-color: $main-yellow;
+  border: 6px solid $main-blue;
   border-radius: 2em;
   box-shadow: 0 5px 10px rgba(0,0,0,.2);
-
 }
+
 
 .minicard {
   margin: auto;
