--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container custom-form"">
 <h1>Finish up your booking</h1>
   <%= simple_form_for [@skill, @booking] do |f| %>
     <%= f.input :date,
