--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -1,10 +1,10 @@
 
-<div class="container custom-form">
+<div class="container">
   <h1>Add a new skill</h1>
   <%= simple_form_for(@skill) do |f| %>
     <%= f.input :name %>
     <%= f.input :description %>
-    <%= f.input :category, collection: %w[Art Music Craftmanship Language] %>
+    <%= f.input :category, collection: %w[Art Music Craftmanship Sports] %>
     <%= f.input :photo, as: :file %>
     <%= f.submit %>
   <% end %>
