fixed size of img for show & added notices

--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="col-md-7">
           <div class="card-img-top">
-            <%= cl_image_tag(@skill.photo.key, class: "card-img-top", crop: :thumb, gravity: :face) %>
+            <%= cl_image_tag(@skill.photo.key, class: "card-img-top", height: 550, crop: :thumb, gravity: :face) %>
           </div>
         </div>
         <div class="col-md-5">
