--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -14,12 +14,13 @@
 
     &:hover {
       border: 3px solid $main-blue;
+      border-radius: 20px;
       box-shadow: 0 15px 30px rgba(0,0,0,.3);
     }
   }
 
   .card-img-top {
-    border-radius: 1em;
+    border-radius: 16px;
     object-fit: cover;
     height:350px;
     border-bottom-right-radius: 0%;
