--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "card";
 @import "content_container";
 @import "btn_custom";
-@import "btn_floating"
+@import "btn_floating";
+@import "notice"
